--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -696,6 +696,7 @@ th {
     border: 2px solid #ff0000;
     font-weight: 700;
 }
+.MuiButtonBase-root.MuiButton-root{text-transform: capitalize;}
 
 .banner-content-text {
     color: #0d629a;
