--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -382,10 +382,12 @@ li a {
 .ProductDetail-tab {
     border: 3px solid var(--secondary-color);
 }
+.ProductDetail-tab .MuiButtonBase-root  {
+    border-right: 3px solid var(--primary-color);
+}
 
-.ProductDetail-tab button {
+.ProductDetail-tab .MuiButtonBase-root.Mui-selected  {
     background-color: var(--secondary-color);
-    border-right: 2px solid var(--primary-color);
     text-transform: capitalize;
 }
 
