--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -370,6 +370,7 @@ li a {
     gap: 20px;
 }
 
+.MuiTabs-indicator{display: none;}
 .Product-card img {
     color: rgba(0, 0, 0, 0.87);
     -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
@@ -379,16 +380,23 @@ li a {
         0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
 
-.ProductDetail-tab {
+/* .ProductDetail-tab {
     border: 3px solid var(--third-color);
-}
+} */
 .ProductDetail-tab .MuiButtonBase-root  {
-    border-right: 3px solid var(--third-color)
+    border: 3px solid var(--third-color);
+    margin-right: 5px;
+    border-bottom: 0;
+    text-transform: capitalize;
+
+}
+.ProductDetail-tab .MuiTabPanel-root {
+    border: 3px solid var(--third-color);
 }
 
 .ProductDetail-tab .MuiButtonBase-root.Mui-selected  {
     background-color: var(--secondary-color);
-    text-transform: capitalize;
+
 }
 
 /******** Product List ***********/
