--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -388,10 +388,15 @@ li a {
     margin-right: 5px;
     border-bottom: 0;
     text-transform: capitalize;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 
 }
 .ProductDetail-tab .MuiTabPanel-root {
     border: 3px solid var(--third-color);
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .ProductDetail-tab .MuiButtonBase-root.Mui-selected  {
