--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -224,11 +224,11 @@ li a {
     background-color: var(--primary-color);
     border-radius: 50%;
 }
-.cardmedia {
+/* .cardmedia {
     background-size: contain !important;
     object-fit: contain !important;
     width: 100%;
-}
+} */
 
 .Process-section .MuiBadge-badge {
     font-weight: 600 !important;
