--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -109,9 +109,9 @@ li a {
     .MuiButtonBase-root.MuiListItem-root.MuiListItem-button.Mui-selected {
     background-color: var(--secondary-color) !important;
 }
-.serach-drawer-container .MuiDrawer-paper.MuiDrawer-paperAnchorTop{
-max-height:50%;
-height: 100%;
+.serach-drawer-container .MuiDrawer-paper.MuiDrawer-paperAnchorTop {
+    max-height: 50%;
+    height: 100%;
 }
 
 .service-section-content table {
@@ -139,8 +139,9 @@ height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
 } */
- .MuiDataGrid-columnHeaderTitleContainerContent {
-     overflow: auto;}
+.MuiDataGrid-columnHeaderTitleContainerContent {
+    overflow: auto;
+}
 
 .MuiButtonBase-root.MuiListItem-root.MuiListItem-gutters.MuiListItem-padding.MuiListItem-button.css-dr3m99-MuiButtonBase-root-MuiListItem-root:hover,
 .MuiButtonBase-root.MuiListItem-root.MuiListItem-gutters.MuiListItem-padding.MuiListItem-button.css-dr3m99-MuiButtonBase-root-MuiListItem-root:hover {
@@ -482,7 +483,7 @@ height: 100%;
     background-color: var(--primary-color);
 } */
 .Footer-section .MuiGrid-root > .MuiGrid-item {
-      padding-top: 20px;
+    padding-top: 20px;
 }
 .about-section {
     position: relative;
@@ -550,17 +551,118 @@ th {
 .ql-align-justify {
     margin-bottom: 1rem;
 }
-.text-white{color:#ffffff;}
+.text-white {
+    color: #ffffff;
+}
+
+/* Calendar.css */
+.react-calendar {
+    width: 100% !important;
+    max-width: 100%;
+    background: white;
+    border-color: var(--primary-color) !important;
+    border-radius: 25px;
+    font-family: "Roboto", "Raleway", "Poppins", sans-serif !important;
+    line-height: 1.125em;
+    font-size: 2.3rem !important;
+    text-decoration: none !important;
+    padding: 2.5rem;
+}
+.MuiListItemText-root span {
+    font-weight: 500;
+    font-size: 1.3rem;
+    /* margin-left: 1rem; */
+}
+.MuiListItemText-root span:active,
+.MuiListItemText-root span:hover {
+    color: var(--primary-color);
+}
+
+
+.holiday-list .MuiListItemText-multiline p {
+    color: #ff0000;
+}
+.react-calendar__navigation button {
+    font-size: 2.3rem !important;
+    color: var(--primary-color);
+    font-weight: 700;
+}
+.react-calendar__month-view__weekdays__weekday {
+    color: var(--primary-color);
+}
+.react-calendar__month-view__days {
+    font-weight: 700;
+}
+
+.react-calendar__tile {
+    text-align: center !important;
+    padding: 1em 0 !important;
+}
+
+.react-calendar__tile.saturday {
+    color: #ed6c02;
+}
+
+.react-calendar__tile.sunday {
+    color: #ed6c02;
+}
+.react-calendar__tile {
+    border-radius: 15px;
+}
+.react-calendar__tile--now {
+    background: none !important;
+    border: 2px solid #2e7d32 !important;
+    color: #2e7d32;
+    border-radius: 15px;
+}
+.react-calendar__tile--active {
+    color: #2e7d32 !important;
+}
+
+.react-calendar__tile.restricted-holiday {
+    color: #e65100;
+    border: 2px solid #e65100 !important;
+}
+
+.react-calendar__tile.gazetted-holiday {
+    /* color:var(--third-color); */
+    color: #ff0000;
+    border: 2px solid #ff0000;
+    font-weight: 700;
+}
+.MuiButtonBase-root.MuiButton-root {
+    text-transform: capitalize;
+}
+
 
 @media (min-width: 1580px) {
     .box-about {
         left: 33% !important;
     }
+    button.react-calendar__tile.react-calendar__month-view__days__day {
+        flex: 0 0 13.59% !important;
+        margin: 8px 8px 8px 8px;
+    }
+}
+@media (min-width: 1367px) and (max-width: 1579px) {
+ 
+    button.react-calendar__tile.react-calendar__month-view__days__day {
+        flex: 0 0 13.99% !important;
+        margin: 3px 3px 3px 3px;
+    }
+
+ 
 }
 @media (min-width: 1024px) and (max-width: 1366px) {
     .box-about {
         left: 46%;
     }
+    button.react-calendar__tile.react-calendar__month-view__days__day {
+        flex: 0 0 13.59% !important;
+        margin: 3px 3px 3px 3px;
+    }
+
+ 
 }
 @media (min-width: 768px) and (max-width: 992px) {
     .schedule-section-call-details .MuiSvgIcon-root {
@@ -580,8 +682,6 @@ th {
 }
 
 @media (max-width: 767px) {
-
-    
     .ql-align-justify img {
         width: 100%;
     }
@@ -759,79 +859,4 @@ th {
 /* Style your items */
 .my-masonry-grid_column > div {
     margin-bottom: 30px;
-}
-
-/* Calendar.css */
-.react-calendar {
-    width: 100% !important;
-    max-width: 100%;
-    background: white;
-    border-color: var(--primary-color) !important;
-    border-radius: 25px;
-    font-family: "Roboto", "Raleway", "Poppins", sans-serif !important;
-    line-height: 1.125em;
-    font-size: 2.3rem !important;
-    text-decoration: none !important;
-    padding: 2.5rem;
-}
-.MuiListItemText-root span {
-    font-weight: 500;
-    font-size: 1.3rem;
-   /* margin-left: 1rem; */
-}
-.MuiListItemText-root span:active , .MuiListItemText-root span:hover {color: var(--primary-color);}
-/* button.react-calendar__tile.react-calendar__month-view__days__day{flex:0 0 14% !important;margin:10px} */
-.holiday-list .MuiListItemText-multiline,
-.holiday-list .MuiListItemText-multiline p {
-    color: #ff0000;
-}
-.react-calendar__navigation button {
-    font-size: 2.3rem !important;
-    color: var(--primary-color);
-    font-weight: 700;
-}
-.react-calendar__month-view__weekdays__weekday {
-    color: var(--primary-color);
-}
-.react-calendar__month-view__days {
-    font-weight: 700;
-}
-
-.react-calendar__tile {
-    text-align: center !important;
-    padding: 1em 0 !important;
-   
-}
-
-.react-calendar__tile.saturday {
-    color: #ed6c02;
-}
-
-.react-calendar__tile.sunday {
-    color: #ed6c02;
-}
-.react-calendar__tile {
-    border-radius: 15px;
-}
-.react-calendar__tile--now {
-    background: none !important;
-    border: 2px solid #2e7d32 !important;
-    color: #2e7d32;
-    border-radius: 15px;
-}
-.react-calendar__tile--active {color: #2e7d32 !important;}
-
-.react-calendar__tile.restricted-holiday {
-    color: #e65100;
-    border: 2px solid #e65100 !important;
-}
-
-.react-calendar__tile.gazetted-holiday {
-    /* color:var(--third-color); */
-    color: #ff0000;
-    border: 2px solid #ff0000;
-    font-weight: 700;
-}
-.MuiButtonBase-root.MuiButton-root {
-    text-transform: capitalize;
 }
