--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -723,23 +723,7 @@ th {
         line-height: 1.25;
         width: 100%;
     }
-
-    /* .Banner-section h1 {
-        width: 100%;
-    }
-
-    .Banner-section .Banner-section-content {
-        margin-inline: 20px;
-    }
-
-    .Banner-section h2 {
-        font-size: 36px;
-        width: 100%;
-    }
-
-    .Banner-section p {
-        margin-top: 16px;
-    } */
+    
     .box-about {
         display: none;
     }
@@ -848,6 +832,15 @@ th {
     .mobile-gallery {
         width: 95%;
     }
+    figure.table {
+        width:100%;
+        overflow-x:auto;  
+      }
+
+      figure.table table thead {
+        font-size: 16px !important;
+      }
+
 }
 
 .my-masonry-grid {
