--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -636,6 +636,11 @@ th {
         margin: 3px 3px 3px 3px;
     }
 }
+@media (min-width: 1024px) and (max-width: 1196px) {
+    .Process-section {
+        background-image: none;
+    }
+}
 @media (min-width: 1024px) and (max-width: 1366px) {
     .box-about {
         left: 46%;
