--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -451,8 +451,8 @@ li a {
     -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     border-radius: 4px;
-    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
-        0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    /* box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
+        0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12); */
 }
 
 .ProductDetail-tab .MuiButtonBase-root {
@@ -694,6 +694,9 @@ th {
     }
     .Process-section {
         background-image: none;
+    }
+    .product-name {
+        font-size: 12px !important;
     }
 }
 
