--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -667,7 +667,7 @@ th {
         background-image: none;
     }
 }
-@media (min-width: 912px) and (max-width: 1366px) {
+@media (min-width: 912px) and (max-width: 1366px) and (orientation: portrait){
     .Banner-section {
         height: 25vh !important;
     }
